# site-ai-assistant-integration

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  research.ipynb
backend/: main.py
backend/api/: router.py
backend/api/handlers/: agents.py  context.py  evaluation.py  validation.py
backend/core/: config.py
backend/evaluation/: experiment_tracking.py  utils.py
backend/evaluation/llm/: bert_utils.py  response_metrics.py  scoring.py
backend/evaluation/rag/: reranking.py  retriever_metrics.py
backend/repositories/: base.py  factory.py  faiss.py  qdrant.py
backend/schemas/: query_schemas.py
backend/services/: agent_services.py  context_service.py  validation_services.py  vector_store.py  vectore_store.py
backend/utils/: lang_detect_utils.py  parsing.py  parsing_utils.py  validation.py  validation_utils.py
frontend/: index.html  script.js  styles.css
static/css/: styles.css
static/js/: main.js  widget.js
templates/: index.html
tests/: test_context_service.py  test_faiss_repository.py  test_qdrant_repository.py
tests/unit/: test_vector_databases.py
