[project]
name = "mozn-sa-customer-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.11",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-groq>=0.2.5",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-decouple>=3.8",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rouge-score>=0.1.2",
    "tavily-python>=0.5.1",
    "uvicorn>=0.34.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.5.1",
    "aiohttp>=3.9.0",
    "firecrawl-py>=1.13.5",
    "lxml>=5.3.1",
    "gunicorn>=23.0.0",
    "langchain-huggingface>=0.1.2",
    "bert-score>=0.3.13",
    "fasttext>=0.9.3",
]
