[project]
name = "site-ai-assistant-integration"
version = "0.1.0"
description = "This repository provides an AI-powered assistant for website integration, featuring knowledge base management, multilingual language detection, and validation metrics. It includes a modular backend, pre-trained models, and Comet ML integration for experiment tracking. Designed for robust evaluation and enhancing user interaction."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.11",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-groq>=0.2.5",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-decouple>=3.8",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rouge-score>=0.1.2",
    "uvicorn>=0.34.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.5.1",
    "aiohttp>=3.9.0",
    "lxml>=5.3.1",
    "gunicorn>=23.0.0",
    "langchain-huggingface>=0.1.2",
    "fasttext>=0.9.3",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
    "numpy==1.26.2",
    "accelerate>=1.6.0",
    "comet-ml>=3.49.8",
    "nest-asyncio>=1.6.0",
    "semantic-chunkers>=0.0.10",
    "semantic-router>=0.0.68",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.12.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "websockets>=15.0.1",
]
